--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@ To change this template use Tools | Templates.
         <br/><br/>
         <header class="w3-top">
             <nav class="w3-topnav w3-black">
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
                 <a href="#">Post</a>
                 <a href="#" id="fantoggle">Fan</a>
                 <span>Search <input style="color: #000000"/></span>
