--- a/editprofile.html
+++ b/editprofile.html
@@ -48,7 +48,7 @@ To change this template use Tools | Templates.
             <div class="w3-group">
                 <input type="file" id="bannerimageupload" accept="image/*" style="display: none" class="upload"/>
                 <a href="#">
-                    <img src="./images/placeholder-banner-image.png" alt="Prevew Image" id="bannerimage" class="w3-input preview" style="width: 50%"/>
+                    <img src="./images/banner-icon.png" alt="Prevew Image" id="bannerimage" class="w3-input preview" style="width: 50%"/>
                 </a>                
             </div>
             <input class="w3-input" type="hidden" name="id" id="id"/>
