--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<html>
-    <head>
-        <title></title>
+    <!DOCTYPE html>
+
+    <html lang="en">
+        <head>
+            <meta charset="utf-8" />
+            <title></title>
+        <style>
+
+            .center {
+              margin: 0 auto;              
+              background-size: 100% 100%;
+              width: 94%;
+              padding: 20px;
+            }        
+            body {
+                background-color: #ecdfdf
+            }
+            #divProfile {
+                color: white;              
+                text-shadow: 2px 2px black;
+            }
+            section {background-color: white}
+            .section-header {border-bottom: 2px solid grey;}
+
+            img {opacity:  1}
+        </style>
         <link rel="stylesheet" href="./css/w3.css"/>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">   
-    </head>
-    <body>        
-        <br/><br/>
+        </head>
+        <body>
+                    <br/><br/>
         <header class="w3-top">
             <nav class="w3-topnav w3-black">
                 <img src="./images/godigio_transparent.png" alt="logo" height="40px"/>
@@ -14,89 +37,79 @@
                 <span>Search <input style="color: #000000"/></span>
                 <a href="#" id="btnFanToggle" style="display:none"></a>
                 <span class="w3-right"><a href="#" id="btnLoginLogout">Logout</a></span>
+                <span class="w3-right" id="btnEditProfile" style="display: none">
+                    <a href="editprofile.html" class="w3-btn">Edit Profile</a>
+                </span>
             </nav>            
         </header>
-        <section>
-            <div id="divProfile" class="w3-card-4" style="background-image: url('./images/placeholder-banner-image.png')">
-                <h3>Profile for <span id="name"></span></h3>
-                <div class="w3-row">
-                    <div class="w3-img w3-half">
-                        <img id="userimage" src="./images/profile-icon.png" alt="user profile image" width="180px"/>
-                    </div>
-                    <div class="w3-half">
-                        <div>DOB : <span id="dob"></span></div>
-                        <div>Location : <span  id="location"></span></div>
-                        <div id="btnEditProfile" style="display: none">
-                            <a href="editprofile.html" class="w3-btn">Edit Profile</a>
-                        </div>
-                    </div>
+        <div id="divProfile" class="w3-container center" 
+            style="background-image: url('./images/banner-icon.png'); background-repeat: no-repeat">           
+            <div class="w3-row w3-container" id="icon">
+                <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+                <div class="w3-col m2 w3-card-2" style="border: 10px">
+                    <img id="userimage" src="./images/profile-icon.png" alt="user profile image" 
+                        width="180px" style="    border: 2px solid white;"/>
                 </div>
-                <div>
-                    Fans: <span id="fancount"></span>  
-                    Fan of: <span id="fanofcount"></span>  
-                    Posts: <span id="postcount"></span>                        
+                <div class="w3-col m4 l4 w3-container w3-padding-32">
+                    <br/>
+                    <h3><span id="name"></span></h3>
+                    <div id="location"></div>
                 </div>
             </div>
-        </section>
-        <section class="w3-row-padding">
+        </div>
+        <section class="w3-container w3-row center">            
             <div class="w3-third">
-                <div id="divFanList" class="w3-card-4">
-                    <h3>Fans of <span class="name"></span></h3>
-                    <div id="lstFans" class="w3-row-padding">
-                        <div id="tmplFan" class="w3-col m3 s6" style="display:none; margin:  10px">
-                            <a id="lnkUser" href="">
-                                <img id="imgProfileImage" src="./images/100x100.jpg" alt="fanof profile image" width="110" height="90"/>
+                <div id="photos" class="w3-container">
+                    <div class="section-header">
+                        <h1>Photos</h1>
+                    </div>
+                    <div id="lstPhotos" class="content">
+                        <div id="tmplPhoto" class="w3-col m3 s6" style="display: none">
+                            <a id="lnkPhoto" href="">
+                                <img id="imgPhoto" src="./images/100x100.jpg" alt="photo" width="110" height="90"/>
                             </a>
-                            <div id="lblName"></div>
                         </div>
                     </div>
+                    <button style="width: 100%">All Photos</button>
                 </div>
-                <div id="divFanOf" class="w3-card-4">
-                    <h3><span class="classLabelName"></span> Is A Fan Of </h3>
-                    <div id="lstFanOf" class="w3-row-padding">       
-                        <div id="tmplFanOf" class="w3-col m3 s6" style="display:none; margin:  10px">
-                            <a id="lnkUser" href="">
-                                <img id="imgProfileImage" src="./images/100x100.jpg" alt="fanof profile image" width="110" height="90"/>
-                            </a>
-                            <div id="lblName"></div>
+                <div id="about" class="w3-container">
+                    <div class="section-header">
+                        <h1>Members</h1>
+                    </div>
+                </div>
+                <div id="status" class="w3-container">
+                    <div class="section-header">
+                        <h1>Status</h1>
+                    </div>
+                </div>
+                <div id="blogs" class="w3-container">
+                    <div class="section-header">
+                        <h1>Recent Blogs</h1>
+                    </div>
+                    <button id="btnBlog" style="width: 100%" onclick="$('#frmPost').show()">Add Blog</button>
+                    <div id="frmPost" class="w3-card-4" style="display: none">  
+                        <div class="w3-row-padding w3-light-grey">
+                            <h4>What's New</h4>
+                            <textarea class="w3-input" id="text" name="text"></textarea>
+                            <nav class="w3-topnav">
+                                <a href="#">
+                                    <i class="fa fa-image">Upload Image</i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-camera">Take Picture</i>
+                                </a>
+                            </nav>
+                            <input type="file" id="imgUpload" name="imgUpload" accept ="image/*" style="display: none" class="upload"/>
+                            <div>
+                                <img src="./images/100x100.jpg" alt="Prevew Image" id="preview-img" 
+                                    style="display:none" width="100px" height="100px"/>
+                            </div>
+                            <button class="btn btn-primary pull-right" id="btnSubmitPost">Post</button>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-half"> 
-                <div id="frmPost" class="w3-card-4" style="display: none">  
-                    <div class="w3-row-padding w3-light-grey">
-                        <h4>What's New</h4>
-                        <textarea class="w3-input" id="text" name="text"></textarea>
-                        <nav class="w3-topnav">
-                            <a href="#">
-                                <i class="fa fa-image">Upload Image</i>
-                            </a>
-                            <a href="#">
-                                <i class="fa fa-camera">Take Picture</i>
-                            </a>
-                        </nav>
-                        <input type="file" id="imgUpload" name="imgUpload" accept ="image/*" style="display: none" class="upload"/>
-                        <div>
-                            <img src="./images/100x100.jpg" alt="Prevew Image" id="preview-img" style="display:none" width="100px" height="100px"/>
-                        </div>
-                        <button class="btn btn-primary pull-right" id="btnSubmitPost">Post</button>
-                    </div>
-                </div>
-                <div id="timeline" class="w3-card-4">                    
-                    <h1>Timeline</h1>
-                    <nav class="w3-topnav">
-                        <a href="#"><i class="fa fa-users" id="btnShowAllPosts">Show All Posts</i></a>
-                        <a href="#"><i class="fa fa-user" id="btnShowUsersPosts">Show Posts For <span class="classLabelName"></span></i></a>
-                    </nav>
-                    <div class="w3-container" id="lstAllPosts">
-                    </div>
-                    <div class="w3-container" id="lstUsersPosts" style="display: none">
+                    </div>                   
+                    <div id="lstBlogs" class="w3-container">
                     </div>
                     <div class="w3-card w3-row" id="tmplPost" style="display: none">
-                        <div class="w3-third">
-                            <img id="imgUserImage" src="./images/100x100.jpg" alt="post profile image" class="w3-circle" width="100px"/>
-                        </div>
                         <div class="w3-two-thirds">
                             <div id="lblText">
                                 This is my first message
@@ -104,86 +117,65 @@
                             <div>
                                 <img id="imgPostImage" src="./images/100x100.jpg" alt="post image" style="max-width:400px; display: none"/>
                             </div>
-                            <div class="w3-container w3-row w3-card-2" style="display: none" id="divShare">
-                                <div class="w3-quarter">
-                                    <img id="imgShareUserImage" src="./images/100x100.jpg" alt="post profile image" class="w3-circle" width="100px"/>
-                                </div>
-                                <div class="w3-quarter">
-                                    <div>Shared Post</div>
-                                    <div id="lblShareText">
-                                    </div>
-                                    <div>
-                                        <img id="imgShareImage" src="./images/100x100.jpg" alt="post image" style="max-width:400px; display: none">
-                                    </div>
-                                </div>                                
-                            </div>
                         </div>
                         <nav class="w3-topnav">
                             <a href="#"><i class="fa fa-heart-o btnLikePost"></i></a><span id="lblLikeCount">0</span>
-                            <span id="share"><a href="#"><i class="fa fa-retweet btnSharePost"></i></a><span id="lblShareCount">0</span></span>
+                            <span id="share"><a href="#"><i class="fa fa-retweet btnSharePost"></i></a>
+                                <span id="lblShareCount">0</span>
+                            </span>
                             <a href="#"><i class="fa fa-comment btnCommentPost"></i></a><span id="lblCommentCount">0</span>
                             <a href="#"><i class="fa fa-trash btnDeletePost"></i></a>
                         </nav>
-                        <input type="hidden" id="valPostID"/>                               
-                        <input type="hidden" id="valUserID"/>
-                        <input type="hidden" id="valPostShared"/>
-                        <input type="hidden" id="valLiked"/>
-                        <div class="w3-container" id="lstComments">
-                        </div>
-                        <div class="w3-card w3-row" id="tmplComment" style="display: none">
-                            <div class="w3-third">
-                                <img id="imgUser" src="./images/100x100.jpg" alt="post profile image" class="w3-circle" width="100px"/>
-                            </div>
-                            <div id="lblCommentText">
-                                First Comment
-                            </div>
-                            <input type="hidden" id="valCommentID"/>
-                            <nav class="w3-topnav">
-                                <a href="#"><i class="fa fa-heart btnLikeComment"></i></a><span id="likecount"></span>
-                                <a href="#"><i class="fa fa-retweet btnShareComment"></i></a><span id="sharecount"></span>
-                                <a href="#"><i class="fa fa-comment btnReplyComment"></i></a><span id="commentcount"></span>                                                       <a href="#"><i class="fa fa-trash btnDeleteComment"></i></a>
-                            </nav>            
-                        </div>
+                    </div>
+                    <button style="width: 100%">All Blogs</button>
+                </div>
+            </div>
+            <div class="w3-third">
+                <div id="songs" class="w3-container">
+                    <div class="section-header">
+                        <h1>Songs</h1>
+                    </div>
+                </div>
+                <div id="videos" class="w3-container">
+                    <div class="section-header">
+                        <h1>Videos</h1>
+                    </div>
+                </div>
+                <div id="comments" class="w3-container">
+                    <div class="section-header">
+                        <h1>Comments</h1>
                     </div>
                 </div>
             </div>
-            
-            <div id="mdlShare" class="w3-modal">
-                <div class="w3-modal-content" style="width: 500px">
-                    <div class="w3-container">
-                        <span onclick="$('#mdlShare').hide();" class="w3-closebtn">&times</span>
-                        <p>Post New Share</p>
-                        <textarea cols="50" class="w3-input" id="valShareText" name="text"></textarea><br/>
-                        <input type="hidden" class="w3-input" id="valSharePostID" name="post_shared"/>
-                        <button id="btnSubmitShare">Submit</button>
-                    </div>
-                    <div id="lblShareText"></div>
-                    <div>
-                        <img id="imgShareImage" alt="share image" src="./images/100x100.jpg" style="display: none" style="max-width: 400px"/>
+            <div class="w3-third">
+                <div id="actions" class="w3-container">
+                    <div class="section-header">
+                        <h1>Quick Actions</h1>
                     </div>
                 </div>
-            </div>
-            <div id="mdlComment" class="w3-modal">
-                <div class="w3-modal-content" style="width: 500px">
-                    <div class="w3-container">
-                        <span onclick="$('#mdlComment').hide();" class="w3-closebtn">&times</span>
-                        <p>Post New Comment</p>
-                        <input type="hidden" class="w3-input" id="valCommentPostID" name="post"/>
-                        <textarea cols="50" class="w3-input" id="comment" name="text"></textarea>
-                        <button id="btnSubmitComment">Submit</button>
+                <div id="stats" class="w3-container">
+                    <div class="section-header">
+                        <h1>Stats</h1>
+                    </div>
+                </div>
+                <div id="Fans" class="w3-container">
+                    <div class="section-header">
+                        <h1>Fans</h1>
+                    </div>
+                </div>
+                <div id="favorites" class="w3-container">
+                    <div class="section-header">
+                        <h1>Favorite Artists</h1>
                     </div>
                 </div>
             </div>
         </section>
-        <footer>
-        </footer>
         <script type="text/javascript" src="./js/jquery.js"></script>
         <script type="text/javascript" src="./js/formcontrols.js"></script>
         <script type="text/javascript" src="./controllers/controllers.js"></script>
         <script type="text/javascript" src="./js/form2json.js"></script>        
-        <script type="text/javascript" src="./js/json2form.js"></script>        
-        <script type="text/javascript" src="./js/findInJSON.js"></script> 
+        <script type="text/javascript" src="./js/json2form.js"></script>                
         <script type="text/javascript" src="./js/fileupload.js"></script>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="index.js"></script>                  
     </body>
 </html>
