--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <button id="btnBlog" style="width: 100%" onclick="$('#frmPost').show()">Add Blog</button>
                     <div id="frmPost" class="w3-card-4" style="display: none">  
                         <div class="w3-row-padding w3-light-grey">
-                            <h4>What's New</h4>
+                            <h4>New Post</h4>
                             <textarea class="w3-input" id="text" name="text"></textarea>
                             <nav class="w3-topnav">
                                 <a href="#">
