--- a/editprofile.html
+++ b/editprofile.html
@@ -60,6 +60,7 @@ To change this template use Tools | Templates.
         <script type="text/javascript" src="editprofile.js"></script>
         <script type="text/javascript" src="./js/fileupload.js"></script>
         <script type="text/javascript" src="./js/uploadfilefromform.js"></script>
+        <script type="text/javascript" src="./js/es6-promise.min.js"></script>
         <script type="text/javascript" src="./controllers/controllers.js"></script>        
     </body>
 </html>
