--- a/welcome.html
+++ b/welcome.html
@@ -11,13 +11,14 @@ To change this template use Tools | Templates.
         <br/><br/>
         <header class="w3-top">
             <nav class="w3-topnav w3-black">
+                <img src="./images/godigio_transparent.png" alt="logo" height="40px"/>
                 <a href="#">Home</a>
-                <a href="#">Post</a>
-                <a href="#" id="fantoggle">Fan</a>
-                <span>Search <input style="color: #000000"/></span>
+                <span>Search <input style="color: #000000"/></span>                
+                <span class="w3-right" id="btnEditProfile" style="display: none">
+                    <a href="editprofile.html" class="w3-btn">Edit Profile</a>
+                </span>
             </nav>            
-        </header>
-        <img src="./images/newgodigiologo.png" width="100px"/>
+        </header>        
         <h1>Welcome To Godigio Fanhub</h1>
         <h1><a href="login.html">Login</a></h1>
         <h1><a href="register.html">Register</a></h1>
