--- a/login.html
+++ b/login.html
@@ -11,13 +11,17 @@ To change this template use Tools | Templates.
         <br/><br/>
         <header class="w3-top">
             <nav class="w3-topnav w3-black">
+                <img src="./images/godigio_transparent.png" alt="logo" height="40px"/>
                 <a href="#">Home</a>
                 <a href="#">Post</a>
-                <a href="#" id="fantoggle">Fan</a>
                 <span>Search <input style="color: #000000"/></span>
+                <button id="btnFanToggle" class="w3-btn w3-black" style="display: none"></button>
+                <span class="w3-right"><a href="#" id="btnLoginLogout">Logout</a></span>
+                <span class="w3-right" id="btnEditProfile" style="display: none">
+                    <a href="editprofile.html" class="w3-btn">Edit Profile</a>
+                </span>
             </nav>            
-        </header>
-        <img src="./images/newgodigiologo.png" width="100px"/>
+        </header>        
         <div class="w3-form w3-third" id="login_form">
             <div class="w3-group">      
                 <input class="w3-input" name="email" id="email" style="width:100%;" type="text" required="true">
@@ -28,7 +32,26 @@ To change this template use Tools | Templates.
                 <label class="w3-label">Password</label>
             </div>            
             <button type="button" id="btnLogin" class="w3-btn w3-right w3-theme">Login</button>
+            <div class="w3-row">
+                <a href="#" id="btnReset" class="w3-center w3-theme" onclick="btnReset();">Forgot Password?</a>
+            </div>
         </div>  
+        <div id="mdlReset" class="w3-modal">
+            <div class="w3-modal-content" style="width: 300px">
+                <div class="w3-container">
+                    <span onclick="document.getElementById('mdlReset').style.display='none';  
+                          $('#mdlReset').find('#frmReset').show();" class="w3-closebtn">&times;</span>
+                    <div class="w3-container" id="frmReset">                    
+                        <label>Enter your email address</label>
+                        <input id="email" name="email" class="w3-input"/>
+                        <button type="button" id="btnSendResetRequest" 
+                            onclick="btnSendResetRequest()" class="w3-btn w3-right w3-theme">Reset Password</button>
+                    </div>
+                </div>
+                <div id="message" style="display: none" class="w3-container">
+                </div>
+            </div>
+        </div>
         <script src="./js/jquery.js"></script>
         <script src="./js/form2json.js"></script>
         <script src="./js/clearForm.js"></script>
